fixed tabs and window alignment without negative margins!

--- a/sideberry.css
+++ b/sideberry.css
@@ -14,7 +14,7 @@
     background-color: transparent;
 }
 
-#root .hidden-panels-popup-layer:before {
+#root .hidden-panels-popup-layer:before {       
     background-color: transparent;
 }
 
@@ -37,13 +37,12 @@
 
 #root .TabsPanel {
     padding: 0px 10px;
-    margin-top: -10px
 }
 
 #root .TabsPanel .PinnedTabsBar {
     display: flex;
     flex-wrap: wrap;
-    margin: 8px 0 0 0;
+    margin: 0px;
     padding: 0;
 }
 
